--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@
 
 p {
     color:rgb(133, 76, 33);
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
+    padding: 3vh 0 0 4vw;
 }
 
 
