--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,53 @@
-* {
-  background-color: rgb(182, 177, 173);
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   
+body {
+  background-color: rgb(116, 113, 113);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
 }
-   
+    
 
 
- .poke-button-class {
-   background-color: gray;
-   padding: 8px 10px;
-   font-size: 20px;
-   width: 70%;
-   border: 3px solid goldenrod;
-   border-radius: 10px;
-   margin: 2vh;
-   cursor: pointer;
-   text-transform: uppercase;
-   box-shadow: 8px 8px 15px #888888;
-   
-   
- }
+  .poke-button-class {
+    background-color: gray;
+    padding: 8px 10px;
+    font-size: 20px;
+    width: 70%;
+    border: 3px solid goldenrod;
+    border-radius: 10px;
+    margin: 2vh;
+    cursor: pointer;
+    text-transform: uppercase;
+    box-shadow: 8px 8px 15px #888888;
+  }
 
- .pokemon-list {
-   list-style-type: none;
-   text-align: center;
- }
 
- .app-container {
-   text-align: center;
-   margin: 10vh auto;
-   padding: 8px 0;
-   width: 80%;
-   border: 3px solid goldenrod;
-   border-radius: 10px;
-   box-shadow: 8px 8px 15px #888888;
+  .pokemon-list {
+    list-style-type: none;
+    margin: 2vh auto;
+    padding: 0;
+    
+ 
+  }
 
- }
+  .app-container {
+    background-color: rgb(168, 165, 165);
+    text-align: center;
+    margin: 10vh auto;
+    padding: 10vh 0;
+    width: 95vw;
+    border: 3px solid goldenrod;
+    border-radius: 10px;
+  }
 
 
 h1 {
- font-size: 25px;
- font-weight: 200;
+  font-size: 25px;
+  font-weight: 200;
+}
+
+@media (min-width: 1025px) {
+  .app-container {
+    width: 40%;
+  }
+  body {
+    background-color: black;
+  }
 }
