--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ h1 {
   top: 20%;
   left: 20%;
   width: 60%;
-  background: rgb(226, 226, 125); 
+  background: rgb(197, 197, 116); 
   z-index: 999; 
   /* to allow scrolling if the screen is not high enough*/
   overflow: auto; 
@@ -74,7 +74,11 @@ h1 {
   display: grid;
   text-align: center;
   text-transform: uppercase;
+  border: 5px double var(--border-color);
+  border-radius: 10px;
 }
+
+
 
 
 #modal-container {
@@ -93,7 +97,7 @@ h1 {
   margin: auto;
   display: inline-block;
   box-sizing: border-box;
-  background: rgb(226, 226, 125); 
+  background: rgb(197, 197, 116);  
   padding: 1vw;
   width: 100%;
   /*max-width: 700px;*/
@@ -104,6 +108,7 @@ h1 {
   float: right;
   -webkit-appearance: none;
   border: 0;
+  margin-top: 0;
   background: none;
   color: rgb(5, 5, 5);
   text-decoration: none;
@@ -118,6 +123,17 @@ h1 {
   margin-bottom: 0;
 }
 
+
+@media (max-width: 600px) {
+  #modal-container {
+    width: 90%;
+    left: 5%;
+  }
+  .modal h1 {
+    margin-top: 0;
+    font-size: 2em;
+  }
+}
 
 @media (min-width: 1025px) {
   .app-container {
