--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,14 +17,14 @@ body {
   .list-group-item .btn {
     background-color: var(--border-color);
     padding: 8px 10px;
-    font-size: calc(1.2rem + .8vw);
+    font-size: calc(1rem + .8vw);
     width: 90%;
     border: 3px double var(--inner-backgr-color);
     border-radius: 10px;
-    margin: 2vh;
+    margin: .6vh;
     cursor: pointer;
     text-transform: uppercase;
-    box-shadow: 8px 8px 15px #888888;
+    box-shadow: 6px 6px 10px #888888;
     color: inherit;
     font-weight: var(--main-font-weight);
   }
@@ -46,8 +46,7 @@ body {
 
   .list-group {
     list-style-type: none;
-    margin: 2vh0 auto;
-    padding: 0;
+    
   }
 
   .app-container {
@@ -65,7 +64,7 @@ h1 {
   font-size: calc(2rem + 3vw);
   font-weight: 900;
   color: var(--border-color);
-  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-width: 3px;
   -webkit-text-stroke-color: var(--font-color);
 }
 
@@ -73,7 +72,7 @@ h1 {
 
 .modal-header h1 {
   text-transform: uppercase;
-  font-size: calc(1rem + 1vw);
+  font-size: calc(1rem + 1.3vw);
   
 }
 
@@ -85,16 +84,19 @@ h1 {
   background-color: var(--border-color);
   border: 3px double var(--inner-backgr-color);
   border-radius: 10px;
+  font-size: calc(.7rem + 1vw);
+  
 }
 
 .modal-header {
-  background-color: var(--inner-btn-backgr-color);
+  
 }
 
 @media (max-width: 800px) {
   .list-group-item .btn {
     font-size: calc(1rem + .8vw);
     width: 95%;
+    margin: 0;
     
   }
 }
